# Mnemosyne

./: .gitignore  README.md  pyproject.toml
docs/: DESIGN.md  ROADMAP.md
examples/: README.md  demo_full.py  demo_integration.py  demo_langgraph.py  demo_ledger.py  demo_verifier.py  demo_vm_rollback.py
src/mnemo/: __init__.py
src/mnemo/agents/: __init__.py  agent.py  swarm.py
src/mnemo/consensus/: __init__.py  bft.py
src/mnemo/integrations/: __init__.py  adapter.py
src/mnemo/ledger/: __init__.py  entry.py  ledger.py  merkle.py
src/mnemo/replay/: __init__.py  engine.py
src/mnemo/rollback/: __init__.py  saga.py  state.py
tests/: test_agents.py  test_consensus.py  test_integrations.py  test_ledger.py  test_replay.py  test_rollback.py
