[project]
name = "mnemo"
version = "0.0.1"
description = "Mnemosyne — deterministic state-replay & BFT consensus for multi-agent swarms"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # core has no hard deps yet; add as modules land
    # "langgraph",
    # "langchain-anthropic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
