[project]
name = "mnemo"
version = "2.0.0"
description = "Mnemosyne — deterministic state-replay & BFT consensus for multi-agent swarms"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # core has no hard deps; the stdlib (hashlib, sqlite3, json) is enough.
    # "langgraph",
    # "langchain-anthropic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
examples = [
    "sympy",   # symbolic verifier/normalizer for demo_verifier.py
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
